--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
-    "react-youtube": "^7.13.1"
+    "react-toastify": "^7.0.3",
+    "react-youtube": "^7.13.1",
+    "redux-persist": "^6.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
